Fixed corresponding top issues and made home link active on mobile

--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -1,3 +1,16 @@
+@font-face{
+    font-family: 'Montserrat-SemiBold';
+    src: url('../fonts/montserrat/Montserrat-SemiBold.otf');
+}
+
+*,
+*::after,
+*::before{
+    box-sizing: inherit;
+    margin: 0;
+    padding: 0;
+}
+
 .sidebar{
     width: 17%;
     background-color: white;
@@ -126,6 +139,7 @@
     background-color: #DDDBF1;
     width: 100%;
     box-sizing: border-box;
+    align-items: center;
 }
 
 .sidenav-btn{
@@ -208,11 +222,12 @@
 .user-controls{
     display: flex;
     align-items: center;
-    margin-right: 50px
+    /*margin-right: 50px*/
 }
 
 .user{
     margin: 0 30px;
+    height: 31px;
 }
 
 .logout{
