--- a/assets/css/plansLayout.css
+++ b/assets/css/plansLayout.css
@@ -270,6 +270,7 @@ main{
     margin-bottom: 5px;
     min-width: 100px;
     font-size: 10px;
+    color: #000;
 }
 
 .rates td img{
@@ -291,6 +292,7 @@ main{
 
 .user{
     margin: 0 30px;
+    height: 31px;
 }
 
 .logout{
@@ -365,7 +367,12 @@ main{
 
 
 
-
+@media(min-height: 700px){
+    .sidebar{
+        padding: 20px 0;
+        box-sizing: border-box;
+    }
+}
 
 
 @media (max-width: 1300px){
@@ -405,7 +412,7 @@ main{
     .logout{
         display: none; 
     }
-    .user-controls{
+    .user-controls,.user{
         margin: 0;
     }
 }
